--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,6 +12,7 @@
     "cloudinary": "^2.6.1",
     "firebase": "^11.3.1",
     "firebase-admin": "^13.1.0",
+    "framer-motion": "^12.23.9",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
@@ -22,6 +23,7 @@
     "next-connect": "^1.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
