--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -27,7 +27,10 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.2.0",
     "react-toastify": "^11.0.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "swiper": "^11.2.4",
+    "use-sound": "^5.0.0",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
   },
